--- a/docker/Dockerfile_SAIGE_GWAS
+++ b/docker/Dockerfile_SAIGE_GWAS
@@ -37,5 +37,5 @@ ADD SAIGE /SAIGE
 RUN R CMD INSTALL SAIGE && \
     rm -rf SAIGE
 
-ADD SAIGE/extdata/step1_fitNULLGLMM.R SAIGE/extdata/step2_SPAtests.R scripts/qqplot.R scripts/postscript.py /usr/local/bin/
-RUN chmod a+x /usr/local/bin/step1_fitNULLGLMM.R /usr/local/bin/step2_SPAtests.R /usr/local/bin/qqplot.R /usr/local/bin/postscript.py
+ADD SAIGE/extdata/step1_fitNULLGLMM.R SAIGE/extdata/step2_SPAtests.R scripts/qqplot.R /usr/local/bin/
+RUN chmod a+x /usr/local/bin/step1_fitNULLGLMM.R /usr/local/bin/step2_SPAtests.R /usr/local/bin/qqplot.R
